# python-opensips

./: .gitignore  README.md  completion.sh  opensips-mi.py  pyproject.toml  setup.py
.github/workflows/: docker-push-image.yml  docker-readme.yml  pypi.yml
docker/: Dockerfile  Makefile  docker.md  run.sh
docs/: event.md  mi.md
opensips/: __init__.py  version.py
opensips/event/: __init__.py  __main__.py  asyncevent.py  asynchandler.py  datagram.py  event.py  generic.py  generic_socket.py  handler.py  json_helper.py  socket.py  stream.py  subscriber.py  wrapper.py
opensips/mi/: __init__.py  __main__.py  connection.py  connector.py  datagram.py  fifo.py  http.py  jsonrpc_helper.py  mi.py  wrapper.py
packaging/debian/: changelog  control  copyright  python3-opensips.bash-completion  rules  watch
packaging/redhat_fedora/: python3-opensips.spec
scripts/: opensips-event  opensips-mi
utils/completion/: python-opensips
